added sort query to playbook_run_systems list
